--- a/package.json
+++ b/package.json
@@ -18,13 +18,8 @@
     "mongoose": "5.2.15",
     "passport": "0.4.0",
     "passport-jwt": "4.0.0",
+    "prettier-eslint": "8.8.2",
     "validator": "10.7.1"
   },
-  "devDependencies": {
-    "eslint": "5.6.0",
-    "eslint-config-airbnb": "17.1.0",
-    "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-jsx-a11y": "6.1.1",
-    "eslint-plugin-react": "7.11.1"
-  }
+  "devDependencies": {}
 }
