--- a/package.json
+++ b/package.json
@@ -4,27 +4,26 @@
   "description": "Social network for developers",
   "main": "server.js",
   "scripts": {
+    "client-install": "npm install --prefix client",
     "start": "node server.js",
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "xavier maimo",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "2.4.3",
     "body-parser": "1.18.3",
+    "concurrently": "4.0.1",
     "express": "4.16.3",
     "gravatar": "1.6.0",
     "jsonwebtoken": "8.3.0",
     "mongoose": "5.2.15",
     "passport": "0.4.0",
     "passport-jwt": "4.0.0",
+    "prettier-eslint": "8.8.2",
     "validator": "10.7.1"
   },
-  "devDependencies": {
-    "eslint": "5.6.0",
-    "eslint-config-airbnb": "17.1.0",
-    "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-jsx-a11y": "6.1.1",
-    "eslint-plugin-react": "7.11.1"
-  }
+  "devDependencies": {}
 }
